--- a/user_login/style.css
+++ b/user_login/style.css
@@ -194,7 +194,8 @@ transition: all 0.5s;
     Padding-top: 140px;
     Padding-bottom: 140px;
     font-family: serif;
-    *box-sizing: border-box; 
+    margin: 0;
+    padding: 0;
 }
 
 
@@ -263,7 +264,7 @@ transition: all 0.5s;
     }
 }
 #about{
-    background-color: rgb(67, 239, 127);
+    
     background-size:cover   ;
     min-height: 100vh;
     width: 100%;
