--- a/user_login/style.css
+++ b/user_login/style.css
@@ -1,3 +1,4 @@
+
 /*NAVBAR*/
 *{
     padding: 0;
@@ -157,10 +158,7 @@ background-color: transparent;
     background-size: cover;
     min-height: 100vh;
     width: 100%;
-    Padding-top: 140px;
-    
-    
-
+    Padding: 100px 0;
 }
 #home input{
     height: 30px;
@@ -168,10 +166,13 @@ background-color: transparent;
     width: 45%;
     border: none;
     outline: none;
-    padding: 15px;
+    padding: 150px;
+
+    
 }
 #home h1{
     color: white;
+    
 }
 .btn2{
     height: 30px;
@@ -188,15 +189,102 @@ transition: all 0.5s;
 }
 #details{
     background-color: white;
+    background: url(img/2.jpg);
     background-size: cover;
+      
     min-height: 100vh;
     width: 100%;
     Padding-top: 140px;
     Padding-bottom: 140px;
     font-family: serif;
     margin: 0;
-    padding: 0;
+    padding: 100px 0;
 }
+ 
+
+
+#about {
+padding: 100px 0;
+}
+.carousel-inner {
+    padding: 1em;
+  }
+  .card {
+    margin: 0 0.5em;
+    box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
+    border: none;
+  }
+  .carousel-control-prev,
+  .carousel-control-next {
+    background-color: #e1e1e1;
+    width: 6vh;
+    height: 6vh;
+    border-radius: 50%;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+  @media (min-width: 768px) {
+    .carousel-item {
+      margin-right: 0;
+      flex: 0 0 33.333333%;
+      display: block;
+    }
+    .carousel-inner {
+      display: flex;
+    }
+  }
+  .card .img-wrapper {
+      max-width: 100%;
+      height: 13em;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+  }
+  .card img {
+      max-height: 100%;
+  }
+  @media (max-width: 767px) {
+    .card .img-wrapper {
+      height: 17em;
+    }
+  }
+  #service
+  
+    .carousel-inner {
+        padding: 1em;
+    }
+      .card {
+        margin: 0 0.5em;
+        box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
+        border: none;
+      }
+      
+      @media (min-width: 768px) {
+        .carousel-item {
+          margin-right: 0;
+          flex: 0 0 33.333333%;
+          display: block;
+        }
+        .carousel-inner {
+          display: flex;
+        }
+      }
+      .card .img-wrapper {
+          max-width: 100%;
+          height: 13em;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+      }
+      .card img {
+          max-height: 100%;
+      }
+      @media (max-width: 767px) {
+        .card .img-wrapper {
+          height: 17em;
+        }
+      }
+  
 
 
 
@@ -263,26 +351,8 @@ transition: all 0.5s;
 
     }
 }
-#about{
-    
-    background-size:cover   ;
-    min-height: 100vh;
-    width: 100%;
-    Padding-top: 140px;
-    Padding-bottom: 140px;
-    font-family: serif;
-    text-align: center;
-}
-#about h2{
-    font-family: serif;
-    text-align: center;
-    Padding-top: 50px;
-}
-#about p{
-    font-family: serif;
-    text-align: center;
-    Padding-top: 50px;
-}
+
+
 /*-----------------Icon----------*/
 .fa 
 {
